syntax = "proto3";

message CreateDocParams {
    string id = 1;
    bytes data = 2;
}
message Doc {
    string id = 1;
    bytes data = 2;
    int64 revision = 3;
}
message UpdateDocParams {
    string id = 1;
    bytes doc_data = 2;
}
message DocChangeset {
    string id = 1;
    bytes data = 2;
}
message QueryDocParams {
    string doc_id = 1;
}
