syntax = "proto3";

message Revision {
    int64 base_rev_id = 1;
    int64 rev_id = 2;
    bytes delta = 3;
    string md5 = 4;
    string doc_id = 5;
    RevType ty = 6;
}
enum RevType {
    Local = 0;
    Remote = 1;
}
