syntax = "proto3";

message WsDocumentData {
    string id = 1;
    WsSource source = 2;
    bytes data = 3;
}
enum WsSource {
    Delta = 0;
}
